parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FUNCION

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr
Rule 5     instruccion -> definicion_instr
Rule 6     instruccion -> asignacion_instr
Rule 7     instruccion -> mientrasq_instr
Rule 8     instruccion -> si_instr
Rule 9     instruccion -> si_sino_instr
Rule 10    imprimir_instr -> IMPRIMIR PARIZQ expresion_cadena PARDER PTCOMA
Rule 11    definicion_instr -> NUMERO ID PTCOMA
Rule 12    asignacion_instr -> ID IGUAL expresion_numerica PTCOMA
Rule 13    mientrasq_instr -> MIENTRASQ PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
Rule 14    si_instr -> SI PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
Rule 15    si_sino_instr -> SI PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER SINO LLAVIZQ instrucciones LLAVDER
Rule 16    expresion_numerica -> expresion_numerica MAS expresion_numerica
Rule 17    expresion_numerica -> expresion_numerica MENOS expresion_numerica
Rule 18    expresion_numerica -> expresion_numerica POR expresion_numerica
Rule 19    expresion_numerica -> expresion_numerica DIVIDIDO expresion_numerica
Rule 20    expresion_numerica -> MENOS expresion_numerica
Rule 21    expresion_numerica -> PARIZQ expresion_numerica PARDER
Rule 22    expresion_numerica -> ENTERO
Rule 23    expresion_numerica -> DECIMAL
Rule 24    expresion_numerica -> ID
Rule 25    expresion_cadena -> expresion_cadena CONCAT expresion_cadena
Rule 26    expresion_cadena -> CADENA
Rule 27    expresion_cadena -> expresion_numerica
Rule 28    expresion_logica -> expresion_numerica MAYQUE expresion_numerica
Rule 29    expresion_logica -> expresion_numerica MENQUE expresion_numerica
Rule 30    expresion_logica -> expresion_numerica IGUALQUE expresion_numerica
Rule 31    expresion_logica -> expresion_numerica NIGUALQUE expresion_numerica

Terminals, with rules where they appear

CADENA               : 26
CONCAT               : 25
DECIMAL              : 23
DIVIDIDO             : 19
ENTERO               : 22
FUNCION              : 
ID                   : 11 12 24
IGUAL                : 12
IGUALQUE             : 30
IMPRIMIR             : 10
LLAVDER              : 13 14 15 15
LLAVIZQ              : 13 14 15 15
MAS                  : 16
MAYQUE               : 28
MENOS                : 17 20
MENQUE               : 29
MIENTRASQ            : 13
NIGUALQUE            : 31
NUMERO               : 11
PARDER               : 10 13 14 15 21
PARIZQ               : 10 13 14 15 21
POR                  : 18
PTCOMA               : 10 11 12
SI                   : 14 15
SINO                 : 15
error                : 

Nonterminals, with rules where they appear

asignacion_instr     : 6
definicion_instr     : 5
expresion_cadena     : 10 25 25
expresion_logica     : 13 14 15
expresion_numerica   : 12 16 16 17 17 18 18 19 19 20 21 27 28 28 29 29 30 30 31 31
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 13 14 15 15
mientrasq_instr      : 7
si_instr             : 8
si_sino_instr        : 9

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . definicion_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . mientrasq_instr
    (8) instruccion -> . si_instr
    (9) instruccion -> . si_sino_instr
    (10) imprimir_instr -> . IMPRIMIR PARIZQ expresion_cadena PARDER PTCOMA
    (11) definicion_instr -> . NUMERO ID PTCOMA
    (12) asignacion_instr -> . ID IGUAL expresion_numerica PTCOMA
    (13) mientrasq_instr -> . MIENTRASQ PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (14) si_instr -> . SI PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (15) si_sino_instr -> . SI PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER SINO LLAVIZQ instrucciones LLAVDER

    IMPRIMIR        shift and go to state 10
    NUMERO          shift and go to state 11
    ID              shift and go to state 12
    MIENTRASQ       shift and go to state 13
    SI              shift and go to state 14

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    definicion_instr               shift and go to state 5
    asignacion_instr               shift and go to state 6
    mientrasq_instr                shift and go to state 7
    si_instr                       shift and go to state 8
    si_sino_instr                  shift and go to state 9

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . definicion_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . mientrasq_instr
    (8) instruccion -> . si_instr
    (9) instruccion -> . si_sino_instr
    (10) imprimir_instr -> . IMPRIMIR PARIZQ expresion_cadena PARDER PTCOMA
    (11) definicion_instr -> . NUMERO ID PTCOMA
    (12) asignacion_instr -> . ID IGUAL expresion_numerica PTCOMA
    (13) mientrasq_instr -> . MIENTRASQ PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (14) si_instr -> . SI PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (15) si_sino_instr -> . SI PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER SINO LLAVIZQ instrucciones LLAVDER

    $end            reduce using rule 1 (init -> instrucciones .)
    IMPRIMIR        shift and go to state 10
    NUMERO          shift and go to state 11
    ID              shift and go to state 12
    MIENTRASQ       shift and go to state 13
    SI              shift and go to state 14

    instruccion                    shift and go to state 15
    imprimir_instr                 shift and go to state 4
    definicion_instr               shift and go to state 5
    asignacion_instr               shift and go to state 6
    mientrasq_instr                shift and go to state 7
    si_instr                       shift and go to state 8
    si_sino_instr                  shift and go to state 9

state 3

    (3) instrucciones -> instruccion .

    IMPRIMIR        reduce using rule 3 (instrucciones -> instruccion .)
    NUMERO          reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    MIENTRASQ       reduce using rule 3 (instrucciones -> instruccion .)
    SI              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVDER         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr .

    IMPRIMIR        reduce using rule 4 (instruccion -> imprimir_instr .)
    NUMERO          reduce using rule 4 (instruccion -> imprimir_instr .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr .)
    MIENTRASQ       reduce using rule 4 (instruccion -> imprimir_instr .)
    SI              reduce using rule 4 (instruccion -> imprimir_instr .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr .)
    LLAVDER         reduce using rule 4 (instruccion -> imprimir_instr .)


state 5

    (5) instruccion -> definicion_instr .

    IMPRIMIR        reduce using rule 5 (instruccion -> definicion_instr .)
    NUMERO          reduce using rule 5 (instruccion -> definicion_instr .)
    ID              reduce using rule 5 (instruccion -> definicion_instr .)
    MIENTRASQ       reduce using rule 5 (instruccion -> definicion_instr .)
    SI              reduce using rule 5 (instruccion -> definicion_instr .)
    $end            reduce using rule 5 (instruccion -> definicion_instr .)
    LLAVDER         reduce using rule 5 (instruccion -> definicion_instr .)


state 6

    (6) instruccion -> asignacion_instr .

    IMPRIMIR        reduce using rule 6 (instruccion -> asignacion_instr .)
    NUMERO          reduce using rule 6 (instruccion -> asignacion_instr .)
    ID              reduce using rule 6 (instruccion -> asignacion_instr .)
    MIENTRASQ       reduce using rule 6 (instruccion -> asignacion_instr .)
    SI              reduce using rule 6 (instruccion -> asignacion_instr .)
    $end            reduce using rule 6 (instruccion -> asignacion_instr .)
    LLAVDER         reduce using rule 6 (instruccion -> asignacion_instr .)


state 7

    (7) instruccion -> mientrasq_instr .

    IMPRIMIR        reduce using rule 7 (instruccion -> mientrasq_instr .)
    NUMERO          reduce using rule 7 (instruccion -> mientrasq_instr .)
    ID              reduce using rule 7 (instruccion -> mientrasq_instr .)
    MIENTRASQ       reduce using rule 7 (instruccion -> mientrasq_instr .)
    SI              reduce using rule 7 (instruccion -> mientrasq_instr .)
    $end            reduce using rule 7 (instruccion -> mientrasq_instr .)
    LLAVDER         reduce using rule 7 (instruccion -> mientrasq_instr .)


state 8

    (8) instruccion -> si_instr .

    IMPRIMIR        reduce using rule 8 (instruccion -> si_instr .)
    NUMERO          reduce using rule 8 (instruccion -> si_instr .)
    ID              reduce using rule 8 (instruccion -> si_instr .)
    MIENTRASQ       reduce using rule 8 (instruccion -> si_instr .)
    SI              reduce using rule 8 (instruccion -> si_instr .)
    $end            reduce using rule 8 (instruccion -> si_instr .)
    LLAVDER         reduce using rule 8 (instruccion -> si_instr .)


state 9

    (9) instruccion -> si_sino_instr .

    IMPRIMIR        reduce using rule 9 (instruccion -> si_sino_instr .)
    NUMERO          reduce using rule 9 (instruccion -> si_sino_instr .)
    ID              reduce using rule 9 (instruccion -> si_sino_instr .)
    MIENTRASQ       reduce using rule 9 (instruccion -> si_sino_instr .)
    SI              reduce using rule 9 (instruccion -> si_sino_instr .)
    $end            reduce using rule 9 (instruccion -> si_sino_instr .)
    LLAVDER         reduce using rule 9 (instruccion -> si_sino_instr .)


state 10

    (10) imprimir_instr -> IMPRIMIR . PARIZQ expresion_cadena PARDER PTCOMA

    PARIZQ          shift and go to state 16


state 11

    (11) definicion_instr -> NUMERO . ID PTCOMA

    ID              shift and go to state 17


state 12

    (12) asignacion_instr -> ID . IGUAL expresion_numerica PTCOMA

    IGUAL           shift and go to state 18


state 13

    (13) mientrasq_instr -> MIENTRASQ . PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER

    PARIZQ          shift and go to state 19


state 14

    (14) si_instr -> SI . PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (15) si_sino_instr -> SI . PARIZQ expresion_logica PARDER LLAVIZQ instrucciones LLAVDER SINO LLAVIZQ instrucciones LLAVDER

    PARIZQ          shift and go to state 20


state 15

    (2) instrucciones -> instrucciones instruccion .

    IMPRIMIR        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    NUMERO          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    MIENTRASQ       reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    SI              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVDER         reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 16

    (10) imprimir_instr -> IMPRIMIR PARIZQ . expresion_cadena PARDER PTCOMA
    (25) expresion_cadena -> . expresion_cadena CONCAT expresion_cadena
    (26) expresion_cadena -> . CADENA
    (27) expresion_cadena -> . expresion_numerica
    (16) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (17) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (18) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (19) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (20) expresion_numerica -> . MENOS expresion_numerica
    (21) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (22) expresion_numerica -> . ENTERO
    (23) expresion_numerica -> . DECIMAL
    (24) expresion_numerica -> . ID

    CADENA          shift and go to state 23
    MENOS           shift and go to state 25
    PARIZQ          shift and go to state 21
    ENTERO          shift and go to state 26
    DECIMAL         shift and go to state 27
    ID              shift and go to state 28

    expresion_cadena               shift and go to state 22
    expresion_numerica             shift and go to state 24

state 17

    (11) definicion_instr -> NUMERO ID . PTCOMA

    PTCOMA          shift and go to state 29


state 18

    (12) asignacion_instr -> ID IGUAL . expresion_numerica PTCOMA
    (16) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (17) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (18) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (19) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (20) expresion_numerica -> . MENOS expresion_numerica
    (21) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (22) expresion_numerica -> . ENTERO
    (23) expresion_numerica -> . DECIMAL
    (24) expresion_numerica -> . ID

    MENOS           shift and go to state 25
    PARIZQ          shift and go to state 21
    ENTERO          shift and go to state 26
    DECIMAL         shift and go to state 27
    ID              shift and go to state 28

    expresion_numerica             shift and go to state 30

state 19

    (13) mientrasq_instr -> MIENTRASQ PARIZQ . expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (28) expresion_logica -> . expresion_numerica MAYQUE expresion_numerica
    (29) expresion_logica -> . expresion_numerica MENQUE expresion_numerica
    (30) expresion_logica -> . expresion_numerica IGUALQUE expresion_numerica
    (31) expresion_logica -> . expresion_numerica NIGUALQUE expresion_numerica
    (16) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (17) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (18) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (19) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (20) expresion_numerica -> . MENOS expresion_numerica
    (21) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (22) expresion_numerica -> . ENTERO
    (23) expresion_numerica -> . DECIMAL
    (24) expresion_numerica -> . ID

    MENOS           shift and go to state 25
    PARIZQ          shift and go to state 21
    ENTERO          shift and go to state 26
    DECIMAL         shift and go to state 27
    ID              shift and go to state 28

    expresion_logica               shift and go to state 31
    expresion_numerica             shift and go to state 32

state 20

    (14) si_instr -> SI PARIZQ . expresion_logica PARDER LLAVIZQ instrucciones LLAVDER
    (15) si_sino_instr -> SI PARIZQ . expresion_logica PARDER LLAVIZQ instrucciones LLAVDER SINO LLAVIZQ instrucciones LLAVDER
    (28) expresion_logica -> . expresion_numerica MAYQUE expresion_numerica
    (29) expresion_logica -> . expresion_numerica MENQUE expresion_numerica
    (30) expresion_logica -> . expresion_numerica IGUALQUE expresion_numerica
    (31) expresion_logica -> . expresion_numerica NIGUALQUE expresion_numerica
    (16) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (17) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (18) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (19) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (20) expresion_numerica -> . MENOS expresion_numerica
    (21) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (22) expresion_numerica -> . ENTERO
    (23) expresion_numerica -> . DECIMAL
    (24) expresion_numerica -> . ID

    MENOS           shift and go to state 25
    PARIZQ          shift and go to state 21
    ENTERO          shift and go to state 26
    DECIMAL         shift and go to state 27
    ID              shift and go to state 28

    expresion_logica               shift and go to state 33
    expresion_numerica             shift and go to state 32

state 21

    (21) expresion_numerica -> PARIZQ . expresion_numerica PARDER
    (16) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (17) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (18) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (19) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (20) expresion_numerica -> . MENOS expresion_numerica
    (21) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (22) expresion_numerica -> . ENTERO
    (23) expresion_numerica -> . DECIMAL
    (24) expresion_numerica -> . ID

    MENOS           shift and go to state 25
    PARIZQ          shift and go to state 21
    ENTERO          shift and go to state 26
    DECIMAL         shift and go to state 27
    ID              shift and go to state 28

    expresion_numerica             shift and go to state 34

state 22

    (10) imprimir_instr -> IMPRIMIR PARIZQ expresion_cadena . PARDER PTCOMA
    (25) expresion_cadena -> expresion_cadena . CONCAT expresion_cadena

    PARDER          shift and go to state 35
    CONCAT          shift and go to state 36


state 23

    (26) expresion_cadena -> CADENA .

    PARDER          reduce using rule 26 (expresion_cadena -> CADENA .)
    CONCAT          reduce using rule 26 (expresion_cadena -> CADENA .)


state 24

    (27) expresion_cadena -> expresion_numerica .
    (16) expresion_numerica -> expresion_numerica . MAS expresion_numerica
    (17) expresion_numerica -> expresion_numerica . MENOS expresion_numerica
    (18) expresion_numerica -> expresion_numerica . POR expresion_numerica
    (19) expresion_numerica -> expresion_numerica . DIVIDIDO expresion_numerica

    PARDER          reduce using rule 27 (expresion_cadena -> expresion_numerica .)
    CONCAT          reduce using rule 27 (expresion_cadena -> expresion_numerica .)
    MAS             shift and go to state 37
    MENOS           shift and go to state 38
    POR             shift and go to state 39
    DIVIDIDO        shift and go to state 40


state 25

    (20) expresion_numerica -> MENOS . expresion_numerica
    (16) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (17) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (18) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (19) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (20) expresion_numerica -> . MENOS expresion_numerica
    (21) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (22) expresion_numerica -> . ENTERO
    (23) expresion_numerica -> . DECIMAL
    (24) expresion_numerica -> . ID

    MENOS           shift and go to state 25
    PARIZQ          shift and go to state 21
    ENTERO          shift and go to state 26
    DECIMAL         shift and go to state 27
    ID              shift and go to state 28

    expresion_numerica             shift and go to state 41

state 26

    (22) expresion_numerica -> ENTERO .

    MAS             reduce using rule 22 (expresion_numerica -> ENTERO .)
    MENOS           reduce using rule 22 (expresion_numerica -> ENTERO .)
    POR             reduce using rule 22 (expresion_numerica -> ENTERO .)
    DIVIDIDO        reduce using rule 22 (expresion_numerica -> ENTERO .)
    PARDER          reduce using rule 22 (expresion_numerica -> ENTERO .)
    CONCAT          reduce using rule 22 (expresion_numerica -> ENTERO .)
    PTCOMA          reduce using rule 22 (expresion_numerica -> ENTERO .)
    MAYQUE          reduce using rule 22 (expresion_numerica -> ENTERO .)
    MENQUE          reduce using rule 22 (expresion_numerica -> ENTERO .)
    IGUALQUE        reduce using rule 22 (expresion_numerica -> ENTERO .)
    NIGUALQUE       reduce using rule 22 (expresion_numerica -> ENTERO .)


state 27

    (23) expresion_numerica -> DECIMAL .

    MAS             reduce using rule 23 (expresion_numerica -> DECIMAL .)
    MENOS           reduce using rule 23 (expresion_numerica -> DECIMAL .)
    POR             reduce using rule 23 (expresion_numerica -> DECIMAL .)
    DIVIDIDO        reduce using rule 23 (expresion_numerica -> DECIMAL .)
    PARDER          reduce using rule 23 (expresion_numerica -> DECIMAL .)
    CONCAT          reduce using rule 23 (expresion_numerica -> DECIMAL .)
    PTCOMA          reduce using rule 23 (expresion_numerica -> DECIMAL .)
    MAYQUE          reduce using rule 23 (expresion_numerica -> DECIMAL .)
    MENQUE          reduce using rule 23 (expresion_numerica -> DECIMAL .)
    IGUALQUE        reduce using rule 23 (expresion_numerica -> DECIMAL .)
    NIGUALQUE       reduce using rule 23 (expresion_numerica -> DECIMAL .)


state 28

    (24) expresion_numerica -> ID .

    MAS             reduce using rule 24 (expresion_numerica -> ID .)
    MENOS           reduce using rule 24 (expresion_numerica -> ID .)
    POR             reduce using rule 24 (expresion_numerica -> ID .)
    DIVIDIDO        reduce using rule 24 (expresion_numerica -> ID .)
    PARDER          reduce using rule 24 (expresion_numerica -> ID .)
    CONCAT          reduce using rule 24 (expresion_numerica -> ID .)
    PTCOMA          reduce using rule 24 (expresion_numerica -> ID .)
    MAYQUE          reduce using rule 24 (expresion_numerica -> ID .)
    MENQUE          reduce using rule 24 (expresion_numerica -> ID .)
    IGUALQUE        reduce using rule 24 (expresion_numerica -> ID .)
    NIGUALQUE       reduce using rule 24 (expresion_numerica -> ID .)


state 29

    (11) definicion_instr -> NUMERO ID PTCOMA .

    IMPRIMIR        reduce using rule 11 (definicion_instr -> NUMERO ID PTCOMA .)
    NUMERO          reduce using rule 11 (definicion_instr -> NUMERO ID PTCOMA .)
    ID              reduce using rule 11 (definicion_instr -> NUMERO ID PTCOMA .)
    MIENTRASQ       reduce using rule 11 (definicion_instr -> NUMERO ID PTCOMA .)
    SI              reduce using rule 11 (definicion_instr -> NUMERO ID PTCOMA .)
    $end            reduce using rule 11 (definicion_instr -> NUMERO ID PTCOMA .)
    LLAVDER         reduce using rule 11 (definicion_instr -> NUMERO ID PTCOMA .)


state 30

    (12) asignacion_instr -> ID IGUAL expresion_numerica . PTCOMA
    (16) expresion_numerica -> expresion_numerica . MAS expresion_numerica
    (17) expresion_numerica -> expresion_numerica . MENOS expresion_numerica
    (18) expresion_numerica -> expresion_numerica . POR expresion_numerica
    (19) expresion_numerica -> expresion_numerica . DIVIDIDO expresion_numerica

    PTCOMA          shift and go to state 42
    MAS             shift and go to state 37
    MENOS           shift and go to state 38
    POR             shift and go to state 39
    DIVIDIDO        shift and go to state 40


state 31

    (13) mientrasq_instr -> MIENTRASQ PARIZQ expresion_logica . PARDER LLAVIZQ instrucciones LLAVDER

    PARDER          shift and go to state 43


state 32

    (28) expresion_logica -> expresion_numerica . MAYQUE expresion_numerica
    (29) expresion_logica -> expresion_numerica . MENQUE expresion_numerica
    (30) expresion_logica -> expresion_numerica . IGUALQUE expresion_numerica
    (31) expresion_logica -> expresion_numerica . NIGUALQUE expresion_numerica
    (16) expresion_numerica -> expresion_numerica . MAS expresion_numerica
    (17) expresion_numerica -> expresion_numerica . MENOS expresion_numerica
    (18) expresion_numerica -> expresion_numerica . POR expresion_numerica
    (19) expresion_numerica -> expresion_numerica . DIVIDIDO expresion_numerica

    MAYQUE          shift and go to state 44
    MENQUE          shift and go to state 45
    IGUALQUE        shift and go to state 46
    NIGUALQUE       shift and go to state 47
    MAS             shift and go to state 37
    MENOS           shift and go to state 38
    POR             shift and go to state 39
    DIVIDIDO        shift and go to state 40


state 33

    (14) si_instr -> SI PARIZQ expresion_logica . PARDER LLAVIZQ instrucciones LLAVDER
    (15) si_sino_instr -> SI PARIZQ expresion_logica . PARDER LLAVIZQ instrucciones LLAVDER SINO LLAVIZQ instrucciones LLAVDER

    PARDER          shift and go to state 48


state 34

    (21) expresion_numerica -> PARIZQ expresion_numerica . PARDER
    (16) expresion_numerica -> expresion_numerica . MAS expresion_numerica
    (17) expresion_numerica -> expresion_numerica . MENOS expresion_numerica
    (18) expresion_numerica -> expresion_numerica . POR expresion_numerica
    (19) expresion_numerica -> expresion_numerica . DIVIDIDO expresion_numerica

    PARDER          shift and go to state 49
    MAS             shift and go to state 37
    MENOS           shift and go to state 38
    POR             shift and go to state 39
    DIVIDIDO        shift and go to state 40


state 35

    (10) imprimir_instr -> IMPRIMIR PARIZQ expresion_cadena PARDER . PTCOMA

    PTCOMA          shift and go to state 50


state 36

    (25) expresion_cadena -> expresion_cadena CONCAT . expresion_cadena
    (25) expresion_cadena -> . expresion_cadena CONCAT expresion_cadena
    (26) expresion_cadena -> . CADENA
    (27) expresion_cadena -> . expresion_numerica
    (16) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (17) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (18) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (19) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (20) expresion_numerica -> . MENOS expresion_numerica
    (21) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (22) expresion_numerica -> . ENTERO
    (23) expresion_numerica -> . DECIMAL
